# terrayaml-operator

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  provision.py  provision.yaml  requirements.txt
camel/: README.rst  pyproject.toml
camel/camel/: handler.py  provision.py
camel/k8s/: crd-terrayaml.yaml  example-terrayaml.yaml  mailcatcher.yaml
camel/tests/: test_camel.py
terrayaml/: pyproject.toml  requirements.txt
terrayaml/k8s/: crd-terrayaml.yaml  example-terrayaml.yaml  terrayaml-operator.yaml
terrayaml/k8s/operator/: env.txt  kustomization.yaml  manifest.yaml
terrayaml/terrayaml/: handler.py  provision.py
terrayaml/tests/: test_camel.py
