[tool.poetry]
name = "terrayaml"
version = "0.0.1"
description = "terrayaml - Ship of the desert, YAML to Terraform"
authors = ["Ross Crawford-d'Heureuse <ross.crawford@mindcurv.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
terrascript = { git = "https://github.com/mjuenema/python-terrascript.git", branch = "develop-0.7" }
namegenerator = "^1.0"
emails = "^0.5.15"
jinja2 = "^2.10"
python-terraform = "^0.10.1"
python-gnupg = "^0.4.5"
kopf = "^0.21.0"
kubernetes = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
